# Rtype

./: .gitignore  AComponent_8cpp.html  AComponent_8cpp__incl.map  AComponent_8cpp__incl.md5  AComponent_8cpp_source.html  AComponent_8hpp.html  AComponent_8hpp__dep__incl.map  AComponent_8hpp__dep__incl.md5  AComponent_8hpp__incl.map  AComponent_8hpp__incl.md5  AComponent_8hpp_source.html  AService_8cpp.html  AService_8cpp__incl.map  AService_8cpp__incl.md5  AService_8cpp_source.html  AService_8hpp.html  AService_8hpp__dep__incl.map  AService_8hpp__dep__incl.md5  AService_8hpp__incl.map  AService_8hpp__incl.md5  AService_8hpp_source.html  Animatable_8cpp.html  Animatable_8cpp__incl.map  Animatable_8cpp__incl.md5  Animatable_8cpp_source.html  Animatable_8hpp.html  Animatable_8hpp__dep__incl.map  Animatable_8hpp__dep__incl.md5  Animatable_8hpp__incl.map  Animatable_8hpp__incl.md5  Animatable_8hpp_source.html  Animation_8cpp.html  Animation_8cpp__incl.map  Animation_8cpp__incl.md5  Animation_8cpp_source.html  Animation_8hpp.html  Animation_8hpp__dep__incl.map  Animation_8hpp__dep__incl.md5  Animation_8hpp__incl.map  Animation_8hpp__incl.md5  (+1055 more)
.github/workflows/: doxygen.yml  mirror.yml
client/: main.cpp
devops/: .gitignore  README.md  inventory.yml  playbook.yml
devops/doc/: config_files.md  docker_image.md  required_ressources.md  start_install.md  usage.md
devops/group_vars/: jenkins.yml  nginx.yml
devops/roles/docker/tasks/: main.yml
devops/roles/jenkins/files/: config.yml  deploy.sh
devops/roles/jenkins/files/jobs/: approve.groovy  main.groovy  setup_jenkins_conf.groovy
devops/roles/jenkins/tasks/: install.yml  main.yml
devops/roles/nginx/files/: nginx_jenkins.conf  nginx_registry.conf
devops/roles/nginx/tasks/: main.yml
docs/: rfc69420.txt
include/: DLLoader.hpp  GameEngine.hpp  IGame.hpp  IObject.hpp  IService.hpp  ParallaxBg.hpp  ParallaxLayer.hpp  maintestdisplay.hpp
lib/: DLLoader.cpp  DLLoader.hpp  IGame.hpp
lib/r_type/: RType.cpp  RType.hpp
networking/: CMakeLists.txt
networking/client/: ClientSocket.cpp  ClientSocket.hpp  main.cpp
networking/server/: ServerSocket.cpp  ServerSocket.hpp  main.cpp
networking/shared/: USocket.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  (+84 more)
server/: main.cpp
src/: GameEngine.cpp  ParallaxBg.cpp  ParallaxLayer.cpp  maintestdisplay.cpp
src/client/: CMakeLists.txt  ClientCore.cpp  ClientCore.hpp  main.cpp
src/client/Components/: AComponent.cpp  AComponent.hpp  IComponent.hpp
src/client/Components/Button/: ButtonComponent.cpp  ButtonComponent.hpp
src/client/Components/Input/: InputComponent.cpp  InputComponent.hpp
src/client/Components/Music/: MusicComponent.cpp  MusicComponent.hpp
src/client/Components/Sound/: SoundComponent.cpp  SoundComponent.hpp
src/client/Components/Sprite/: SpriteComponent.cpp  SpriteComponent.hpp
src/client/Components/Text/: TextComponent.cpp  TextComponent.hpp
src/client/Scenes/: AScene.cpp  AScene.hpp  IScene.hpp
src/client/Scenes/Game/: GameScene.cpp  GameScene.hpp
src/client/Scenes/Menu/: MainScene.cpp  MainScene.hpp  MenuScene.cpp  MenuScene.hpp
src/lib/: DLLoader.hpp
src/lib/r_type/: CMakeLists.txt  RType.cpp  RType.hpp
src/lib/r_type/Scenes/: AScene.cpp  AScene.hpp  IScene.hpp
src/lib/r_type/Scenes/Game/: Game.cpp
src/lib/r_type/Scenes/Lobby/: Lobby.cpp  Lobby.hpp
src/lib/r_type/components/: Animatable.cpp  Animatable.hpp  Collidable.cpp  Collidable.hpp  Controlable.cpp  Controlable.hpp  Drawable.cpp  Drawable.hpp  IComponent.hpp  Shooting.hpp  Spawnable.cpp  Spawnable.hpp  Timer.cpp  Timer.hpp  Upgrading.hpp
src/lib/r_type/entities/: IEntity.hpp  Player.cpp  Player.hpp
src/lib/r_type/game_logic/: Drawable.hpp  Life.cpp  Life.hpp  Movable.cpp  Movable.hpp  Shooting.cpp  Upgrading.cpp
src/lib/r_type/services/: AService.cpp  AService.hpp  Animation.cpp  Animation.hpp  Collision.cpp  Collision.hpp  Graphic.cpp  Graphic.hpp  GraphicService.cpp  GraphicService.hpp  IService.hpp  Move.cpp  Move.hpp  Spawner.cpp  Spawner.hpp  TimeManagement.cpp  TimeManagement.hpp
src/server/: CMakeLists.txt  Server.cpp  Server.hpp  main.cpp
